Fixed z-index of nav menu

--- a/assets/stylesheets/_site.less
+++ b/assets/stylesheets/_site.less
@@ -33,7 +33,7 @@
     background: @black;
     position: fixed;
     top: 0;
-    z-index: 100;
+    z-index: 101;
     border-bottom: 5px solid @colour1;
     text-align: center;
     a:link, a:visited {
